# fine_mapping

./: README.md
full_map/: CMakeLists.txt  package.xml
full_map/include/: pointcloud_common.h  pointcloud_common.hpp
full_map/src/: pointcloud_common.cpp  test_build_map.cpp
mapping_refinement/: CMakeLists.txt  package.xml
mapping_refinement/include/: asynch_visualizer.h  fine_edge.h  fine_mapping.h  fine_registration.h  fine_vertex.h  scan.h  simpleXMLparser.h  stitched_map.h
mapping_refinement/src/: asynch_visualizer.cpp  compare_registration.cpp  fine_edge.cpp  fine_mapping.cpp  fine_registration.cpp  fine_vertex.cpp  map_from_scan.cpp  reproject_scans.cpp  save_scan.cpp  scan.cpp  stitched_map.cpp  stitched_map.h  test_compare_registration.cpp  test_cuda.cpp  test_icp_mapping.cpp  test_mapping.cpp  test_projection.cpp  test_structure.cpp  visualize_registration.cpp
mapping_refinement/srv/: SaveScan.srv
primitive_refinement/: CMakeLists.txt  package.xml
primitive_refinement/include/: graph_extractor.h  primitive_refiner.h  primitive_refiner.hpp  refinement_core.h
primitive_refinement/src/: area_graph.cpp  graph_extractor.cpp  pick_areas.cpp  refinement_core.cpp  split_multiple_cloud.cpp  split_multiple_clouds.cpp  split_multiple_final.cpp  split_multiple_final2.cpp  test_multiple_clouds.cpp  test_refinement.cpp
